# youtube-dl

./: .gitignore  README.md  filter_videos.py  pyproject.toml  urls.txt  youtube-dl.py
examples/: custom_format_selector.py  extract_audio.py  extract_info.py  filter_videos.py  logger_progress_hook.py  post_processor.py
youtube_dl/: youtube-dl.py
